added new session front end

--- a/templates/session_.html
+++ b/templates/session_.html
@@ -50,5 +50,6 @@
             </tr>
         </table>
         {% endfor %}
+        <a href="/api/session/purge/{{ title.split(':')[1].strip() }}">!!Delete this game session!!</a>
     </body>
 </html>
