--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,8 @@
     <br><br>
     <a href="{{ url_for('new_session') }}">Start New Session</a>
     <br><br>
+    <a href="{{ url_for('games') }}">List Games</a>
+    <br><br>
+    <a href="">Players</a>
 </body>
 </html>
